<resources>
    <string name="app_name" translatable="false">BG Counter</string>
    <string name="next">Next</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="save">Save</string>
    <string name="quantity">Quantity</string>
    <string name="board_game_name">Board game name</string>
    <string name="add_entry">Add entry</string>
    <string name="middle">Middle</string>
    <string name="easy">Easy</string>
    <string name="heavy">Heavy</string>
    <string name="stats_middle">Middle</string>
    <string name="stats_easy">Easy</string>
    <string name="stats_heavy">Heavy</string>
    <string name="mine">Mine</string>
    <string name="new_for_me">New for me</string>
    <string name="list">List</string>
    <string name="add">Add</string>
    <string name="stats">Stats</string>
    <string name="total">Total</string>
    <string name="new_games">New games</string>
    <string name="my_games">My games</string>
    <string name="unpacked_games">Unpacked games</string>
    <string name="unpacked_desc">My games that were new</string>
    <string name="stats_percent" translatable="false">(%d %%)</string>
    <string name="edit_date">Edit date</string>
    <string name="delete">Delete</string>
    <string name="entry_form_invalid">Form is invalid</string>
</resources>